syntax = "proto3";
option csharp_namespace = "ClinicServiceNamespace";
import "Protos/google/protobuf/wrappers.proto";
import "Protos/google/api/annotations.proto";
package proto;
//Клиент
service ClinicService{
	//добавить
	rpc CreateClient (CreateClientRequest) returns (CreateClientResponse);
	//обновить
	rpc UpdateClient (UpdateClientRequest) returns (UpdateClientResponse);
	//удалить
	rpc DeleteClient (DeleteClientRequest) returns (DeleteClientResponse);
	//получить по id
	rpc GetClientById (GetClientByIdRequest) returns (ClientResponse){
		//option (google.api.http) = {
		//	post:"/api/clientbyid",
		//	body: "*", 
		//	responce_body:"client"
		//};
	};
	//получить всех клиентов
	rpc GetClients (GetClientsRequest) returns (GetClientsResponse){
		option (google.api.http) = {
		get:"/api/clients"
		};
	}
}
message CreateClientRequest {
	//документ
	string document = 1;
	//фамилия
	string surname = 2;
	//имя
	string firstName = 3;
	//отчество
	string patronymic = 4;
}

message CreateClientResponse {
	int32 clientId = 1;
	int32 errCode = 2;
	string errMesage = 3;
}

message UpdateClientRequest {
	int32 clientId = 1;
	string document = 2;
	string surname = 3;
	string firstName = 4;
	string patronymic = 5;
}

message UpdateClientResponse {
	int32 errCode = 1;
	string errMessage = 2;
}

message DeleteClientRequest {
	int32 clientId = 1;
}

message DeleteClientResponse {
	int32 errCode = 1;
	string errMessage = 2;
}

message GetClientByIdRequest {
	int32 clientId = 1;
}

message GetClientByIdResponse {
	ClientResponse client = 1;
	int32 errCode = 2;
	string errMessage = 3;
}

message ClientResponse {
	int32 clientId = 1;
	string document = 2;
	string surname = 3;
	string firstName = 4;
	string patronymic = 5;
}

message GetClientsRequest {
}

message GetClientsResponse {
	repeated ClientResponse clients = 1;
	int32 errCode = 2;
	string errMessage = 3;
}