syntax = "proto3";
option csharp_namespace = "ClinicServiceV2"; //ClinicServiceNamespace
import "google/protobuf/wrappers.proto";
import "Protos/google/api/annotations.proto";
package proto;

service ClinicService{
    //Create client
	rpc CreateClinet (CreateClientRequestGrpc) returns (CreateClientResponse)
    {
        option (google.api.http) = {
        post: "/api/CreateClinet"
        body: "*"
        };
    }
    //Update client
	rpc UpdateClient (UpdateClientRequest) returns (UpdateClientResponse){
        option (google.api.http) = {
        patch: "/api/UpdateClient"
        body: "*"
        };
    }

    //Delete client
	rpc DeleteClient (DeleteClientRequest) returns (DeleteClientResponse)
     {
        option (google.api.http) = {
        delete: "/api/DeleteClient"
        body: "*"
        };
    }


    //Get client by Id
	rpc GetClientById (GetClientByIdRequest) returns (ClientResponse)
     {
        option (google.api.http) =  {
            get: "/api/GetClientById"
        };
    }

    //Get all clients
	rpc GetClients (GetClientsRequest) returns (GetClientsResponse)
   {
        option (google.api.http) =  {
            get: "/api/clients"
            body:"*"
        };
    }
}

//Request create clien
message CreateClientRequestGrpc {
        string document = 1;
        string surname = 2;
        string firstName = 3;
        string patronymic = 4;
}

message CreateClientResponse {
		google.protobuf.Int32Value clientId = 1;
        int32 errCode = 2;
        string errMessage =3;
}

message UpdateClientRequest {
        int32 clientId = 1;
        string document = 2;
        string surname = 3;
        string firstName = 4;
        string patronymic = 5;
}

message UpdateClientResponse {
		int32 errCode = 1;
        string errMessage = 2;
}

message DeleteClientRequest {
        int32 clientId = 1;
}

message DeleteClientResponse {
		int32 errCode = 1;
        string errMessage = 2;
}

message GetClientByIdRequest {
        int32 clientId = 1;
}

message GetClientByIdResponse {
        ClientResponse client = 1;
        int32 errCode = 2;
        string errMessage =3;
}

message ClientResponse {
		int32 clientId = 1;
        string document = 2;
        string surname = 3;
        string firstName = 4;
        string patronymic = 5;
}

message GetClientsRequest{

}

message GetClientsResponse{
    repeated ClientResponse clients = 1;
    int32 errCode = 2;
    string errMessage =3;
}

